--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,6 +18,7 @@ eggs =
     Pillow
     RelStorage
     psycopg2
+    plonesocial.suite
 rel-storage =
     keep-history false
     blob-dir /tmp/blobcache
